[Android] Refactor package layout
Move classes belonging to the file browser, player service and player
interface to their own packages.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>